--- a/index.html
+++ b/index.html
@@ -4,32 +4,46 @@
   <title>MeckTech Assessment</title>
   <style>
     body {
-      background-color: #0f0f0f;
+      background: #0e0e0e;
+      color: white;
       font-family: Arial, sans-serif;
-      color: #fff;
       text-align: center;
-      padding: 30px;
+      margin: 0;
+      padding: 20px;
+    }
+    .container {
+      max-width: 600px;
+      margin: auto;
+      padding: 20px;
+      background: #1e1e1e;
+      border-radius: 10px;
+    }
+    input, button {
+      padding: 10px;
+      margin: 8px;
+      border-radius: 5px;
+      border: none;
+      font-size: 16px;
+    }
+    button {
+      background-color: #4CAF50;
+      color: white;
+      cursor: pointer;
     }
     .logo {
-      max-width: 120px;
+      width: 100px;
       margin-bottom: 10px;
     }
-    input {
-      padding: 10px;
-      margin: 10px;
-      width: 250px;
-      font-size: 16px;
+    .question {
+      margin-bottom: 20px;
     }
-    button, a.button {
-      background-color: #28a745;
-      color: white;
-      padding: 10px 20px;
-      font-size: 16px;
-      text-decoration: none;
-      border: none;
-      cursor: pointer;
-      margin: 10px;
-      border-radius: 5px;
+    .option {
+      display: flex;
+      justify-content: space-between;
+      padding: 5px 0;
+    }
+    .hidden {
+      display: none;
     }
     .question-box {
       margin-top: 30px;
