--- a/index.html
+++ b/index.html
@@ -4,66 +4,36 @@
   <title>MeckTech Assessment</title>
   <style>
     body {
-      background: #0e0e0e;
-      color: white;
+      background-color: #0f0f0f;
       font-family: Arial, sans-serif;
+      color: #fff;
       text-align: center;
-      margin: 0;
-      padding: 20px;
-    }
-    .container {
-      max-width: 600px;
-      margin: auto;
-      padding: 20px;
-      background: #1e1e1e;
-      border-radius: 10px;
-    }
-    input, button {
-      padding: 10px;
-      margin: 8px;
-      border-radius: 5px;
-      border: none;
-      font-size: 16px;
-    }
-    button {
-      background-color: #4CAF50;
-      color: white;
-      cursor: pointer;
+      padding: 30px;
     }
     .logo {
-      width: 100px;
+      max-width: 120px;
       margin-bottom: 10px;
     }
-    .question {
-      margin-bottom: 20px;
+    input {
+      padding: 10px;
+      margin: 10px;
+      width: 250px;
+      font-size: 16px;
     }
-    .option {
-      display: flex;
-      justify-content: space-between;
-      padding: 5px 0;
-    }
-    .hidden {
-      display: none;
+    button, a.button {
+      background-color: #28a745;
+      color: white;
+      padding: 10px 20px;
+      font-size: 16px;
+      text-decoration: none;
+      border: none;
+      cursor: pointer;
+      margin: 10px;
+      border-radius: 5px;
     }
     .question-box {
       margin-top: 30px;
     }
-    .option {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background: #1a1a1a;
-  padding: 10px 15px;
-  margin: 10px 0;
-  border-radius: 6px;
-  color: white;
-  font-size: 16px;
-}
-
-.option input[type="radio"] {
-  transform: scale(1.3);
-}
-
   </style>
 </head>
 <body>
@@ -126,13 +96,19 @@
     }
 
     function showQuestion() {
-      ${q.options.map((opt, i) => `
-  <label class="option">
-    <span>${opt}</span>
-    <input type="radio" name="option" value="${i}" />
-  </label>
-`).join("")}
-
+      const q = questions[currentIndex];
+      const quiz = document.getElementById("quiz");
+      quiz.innerHTML = `
+        <div class="question">
+          <h3>Q${currentIndex + 1}: ${q.text}</h3>
+          ${q.options.map((opt, i) => `
+            <div class="option">
+              <span>${opt}</span>
+              <input type="radio" name="option" value="${i}">
+            </div>
+          `).join("")}
+          <button onclick="submitAnswer()">Next</button>
+        </div>`;
     }
 
     function submitAnswer() {
